objects/LLC_BI__DocInfoTemplate__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__DocClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Document Class</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>DocInfo Templates</relationshipLabel>
        <relationshipName>DocInfo_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Document Type</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>DocInfo Templates</relationshipLabel>
        <relationshipName>DocInfo_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__LoanType__c</fullName>
        <description>This field is not currently used.</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Start-up</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocInfo Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocInfo Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>